--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ figure {
 <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600,400italic,600italic,300,300italic' rel='stylesheet' type='text/css'>
 <head>
     <title>Shape, Light, and Material Decomposition from Images using Monte Carlo Rendering and Denoising</title>
-    <meta property="og:description" content="Extracting Triangular 3D Models, Materials, and Lighting From Images"/>
+    <meta property="og:description" content="Shape, Light, and Material Decomposition from Images using Monte Carlo Rendering and Denoising"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
