Updated author link

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ figure {
     <div id="authors">
         <div class="author-row">
             <div class="col-3 text-center"><a href="https://research.nvidia.com/person/jon-hasselgren">Jon Hasselgren</a><sup>1</sup></div>
-            <div class="col-3 text-center"><a href="">Nikolai Hofmann</a><sup>1</sup></div>
+            <div class="col-3 text-center"><a href="https://www.lgdv.tf.fau.de/person/2068/">Nikolai Hofmann</a><sup>1</sup></div>
             <div class="col-3 text-center"><a href="https://research.nvidia.com/person/jacob-munkberg">Jacob Munkberg</a><sup>1</sup></div>
         </div>
 
