--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@ figure {
                 <span class="material-icons"> description </span> 
                   BibTeX
             </a>
-            <a class="supp-btn" href="">
+            <a class="supp-btn" href="https://github.com/NVlabs/nvdiffrecmc">
                 <span class="material-icons"> description </span> 
-                  Code (soon)
+                  Code
             </a>
         </div></div>
     </div>
